--- a/styles.css
+++ b/styles.css
@@ -16,41 +16,41 @@ footer {
   font-family: sans-serif;
 }
 
-.w {
+.a {
   background-image: url('./images/tom1.png');
 
 }
 
-.a {
+.s {
   background-image: url('./images/tom2.png');
 
 }
 
-.s {
+.d {
   background-image: url('./images/tom3.png');
 
 }
 
-.d {
+.f {
   background-image: url('./images/tom4.png');
 
 }
 
-.j {
+.h {
   background-image: url('./images/snare.png');
 
 }
 
-.k {
+.j {
   background-image: url('./images/kick.png');
 
 }
 
-.l {
+.k {
   background-image: url('./images/crash.png');
 
 }
-.p{
+.l{
  background-image: url('./images/OIP.jpg');
 }
 
